[gd_scene load_steps=3 format=3 uid="uid://bi1kb3nr003yp"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_tljp8"]
[ext_resource type="Theme" uid="uid://e1rx8rawxhv8" path="res://scenes/menu/main_menu/main_menu_theme.tres" id="2_l026q"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_tljp8")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -324.0
offset_right = 324.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartGame" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_l026q")
text = "Start Game
"

[node name="LoadGame" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_l026q")
text = "Load Game"

[node name="ExitToDesktop" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_l026q")
text = "Exit To Deskop"

[connection signal="pressed" from="Panel/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitToDesktop" to="." method="_on_exit_to_desktop_pressed"]
